tests/baselines/reference/allowSyntheticDefaultImports6.errors.txt
a.ts(1,8): error TS1259: Module '"b"' can only be default-imported using the 'esModuleInterop' flag


==== b.d.ts (0 errors) ====
    declare class Foo {
    	member: string;
    }
    export = Foo;
    
==== a.ts (1 errors) ====
    import Foo from "./b";
           ~~~
!!! error TS1259: Module '"b"' can only be default-imported using the 'esModuleInterop' flag
!!! related TS2594 b.d.ts:4:1: This module is declared with 'export =', and can only be used with a default import when using the 'esModuleInterop' flag.
    export var x = new Foo();
    